@@ -1,2 +1,3 @@
 Remove Sample::computeStandardDeviationPerComponent
 Remove Hanning alias
+Remove ADS alias
