@@ -26,7 +26,7 @@ ot_add_source_file (Wilks.cxx)
 ot_add_source_file (SubsetSamplingResult.cxx)
 ot_add_source_file (SubsetSampling.cxx)
 ot_add_source_file (QuadrantSampling.cxx)
-ot_add_source_file (AdaptiveDirectionalSampling.cxx)
+ot_add_source_file (AdaptiveDirectionalStratification.cxx)
 ot_add_source_file (ProbabilitySimulationAlgorithm.cxx)
 ot_add_source_file (ExpectationSimulationAlgorithm.cxx)
 ot_add_source_file (ExpectationSimulationResult.cxx)
@@ -57,7 +57,7 @@ ot_install_header_file (LHS.hxx)
 ot_install_header_file (SubsetSamplingResult.hxx)
 ot_install_header_file (SubsetSampling.hxx)
 ot_install_header_file (QuadrantSampling.hxx)
-ot_install_header_file (AdaptiveDirectionalSampling.hxx)
+ot_install_header_file (AdaptiveDirectionalStratification.hxx)
 ot_install_header_file (ProbabilitySimulationAlgorithm.hxx)
 ot_install_header_file (ExpectationSimulationAlgorithm.hxx)
 ot_install_header_file (ExpectationSimulationResult.hxx)
