@@ -945,7 +945,7 @@ ot_add_python_module(simulation simulation_module.i
                       SafeAndSlow.i SafeAndSlow_doc.i.in
                       SubsetSamplingResult.i SubsetSamplingResult_doc.i.in
                       SubsetSampling.i SubsetSampling_doc.i.in
-                      AdaptiveDirectionalSampling.i AdaptiveDirectionalSampling_doc.i.in
+                      AdaptiveDirectionalStratification.i AdaptiveDirectionalStratification_doc.i.in
                       ExpectationSimulationAlgorithm.i ExpectationSimulationAlgorithm_doc.i.in
                       ExpectationSimulationResult.i ExpectationSimulationResult_doc.i.in
                       SobolSimulationAlgorithm.i SobolSimulationAlgorithm_doc.i.in
